Increase NVCC_THREADS

--- a/.github/actions/distributed/build-vllm/action.yml
+++ b/.github/actions/distributed/build-vllm/action.yml
@@ -56,3 +56,4 @@ runs:
           USE_SCCACHE=1
           torch_cuda_arch_list=6.0 6.1 7.0 7.5 8.0 8.6 8.9 9.0+PTX
           max_jobs=80
+          nvcc_threads=40
