(vllm) Decrease NVCC_THREADS

--- a/.github/actions/build-vllm/action.yml
+++ b/.github/actions/build-vllm/action.yml
@@ -55,6 +55,8 @@ runs:
           SCCACHE_GHA_ENABLED=1
           USE_SCCACHE=1
           torch_cuda_arch_list=6.0 6.1 7.0 7.5 8.0 8.6 8.9 9.0+PTX
+          max_jobs=2
+          nvcc_threads=2
 
         outputs: |
           type=local,dest=build
