--- a/.github/actions/build-triton/action.yml
+++ b/.github/actions/build-triton/action.yml
@@ -42,3 +42,15 @@ runs:
       with:
         package-dir: ${{ inputs.repository }}/${{ inputs.ref }}/python
         output-dir: dist
+
+    - name: Repackage wheels
+      uses: ./.github/actions/common/repackage-wheels
+      with:
+        name: triton_pascal
+        path: dist/*.whl
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: triton_pascal-${{ matrix.python_version }}
+        path: dist/*.whl
