--- a/.github/actions/build-vllm/action.yml
+++ b/.github/actions/build-vllm/action.yml
@@ -16,6 +16,9 @@ runs:
     - name: Cleanup runner image
       uses: ./.github/actions/common/runner-cleanup
 
+    - name: Expose cache environment variables
+      uses: ./.github/actions/common/expose-cache-vars
+
     - name: Checkout ${{ inputs.repository }} (${{ inputs.ref }})
       uses: actions/checkout@v4
       with:
@@ -29,19 +32,15 @@ runs:
         ref: ${{ inputs.ref }}
         repository: ${{ inputs.repository }}
 
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v3
       with:
         password: ${{ env.GITHUB_TOKEN }}
         registry: ghcr.io
         username: ${{ github.actor }}
-
-    - name: Expose ACTIONS_CACHE_URL and ACTIONS_RUNTIME_TOKEN
-      uses: actions/github-script@v7
-      with:
-        script: |
-          core.exportVariable("ACTIONS_CACHE_URL", process.env["ACTIONS_CACHE_URL"])
-          core.exportVariable("ACTIONS_RUNTIME_TOKEN", process.env["ACTIONS_RUNTIME_TOKEN"])
 
     - name: Build
       uses: docker/build-push-action@v6
@@ -62,11 +61,24 @@ runs:
           nvcc_threads=2
 
         outputs: |
-          type=local,dest=build
+          type=tar,dest=build.tar
 
     - name: Copy wheel files
       shell: bash
-      run: mv build/dist . && rm -r build
+      run: tar --extract --file=build.tar --strip-components=1 workspace/dist && rm build.tar
+
+    - name: Repackage wheels
+      uses: ./.github/actions/common/repackage-wheels
+      with:
+        name: vllm_pascal
+        tags: cp38-abi3-linux_x86_64
+        path: dist/*.whl
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: vllm_pascal
+        path: dist/*.whl
 
     - name: Build and push
       uses: docker/build-push-action@v6
@@ -83,3 +95,5 @@ runs:
           SCCACHE_GHA_ENABLED=1
           USE_SCCACHE=1
           torch_cuda_arch_list=6.0 6.1 7.0 7.5 8.0 8.6 8.9 9.0+PTX
+          max_jobs=2
+          nvcc_threads=2
