(actions) Fix `repackage wheels` action

--- a/.github/actions/common/repackage-wheels/action.yml
+++ b/.github/actions/common/repackage-wheels/action.yml
@@ -25,9 +25,9 @@ runs:
   using: "composite"
 
   steps:
-    - name: Upgrade wheel package
+    - name: Install dependencies
       shell: bash
-      run: pip3 install --upgrade wheel
+      run: pip3 install --upgrade packaging wheel
 
     - name: Repackage wheels
       shell: python
