(vllm) Upload "latest" docker tag

--- a/.github/workflows/vllm-pascal-0.6.1.post2.yml
+++ b/.github/workflows/vllm-pascal-0.6.1.post2.yml
@@ -11,8 +11,8 @@ jobs:
       - name: Build vLLM wheels
         uses: ./.github/actions/build-vllm
         with:
+          docker_token: ${{ secrets.GHCR_TOKEN }}
           ref: v0.6.1.post2
-          ghcr_token: ${{ secrets.GHCR_TOKEN }}
 
   publish:
     needs: build
