--- a/.github/actions/build-vllm/action.yml
+++ b/.github/actions/build-vllm/action.yml
@@ -1,16 +1,20 @@
 name: Build vLLM wheels
 
 inputs:
+  docker_latest:
+    default: false
+    type: boolean
+
+  docker_token:
+    default: ~
+    type: string
+
   ref:
     default: main
     type: string
 
   repository:
     default: vllm-project/vllm
-    type: string
-
-  ghcr_token:
-    required: true
     type: string
 
 runs:
@@ -39,12 +43,32 @@ runs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: Login to GitHub Container Registry
+    - if: inputs.docker_token != ''
+      name: Login to GitHub Container Registry
       uses: docker/login-action@v3
       with:
-        password: ${{ inputs.ghcr_token }}
+        password: ${{ inputs.docker_token }}
         registry: ghcr.io
         username: ${{ github.repository_owner }}
+
+    - name: Generate image tags
+      uses: actions/github-script@v7
+      with:
+        script: |
+          // Variable to store image tags
+          const tags = [];
+
+          // Add ref to tags
+          tags.push(`ghcr.io/${context.repo.owner}/vllm:${core.getInput('ref')}`);
+
+          // If this image marked as latest
+          if (core.getBooleanInput('ghcr_latest')) {
+            // Add latest to tags
+            tags.push(`ghcr.io/${context.repo.owner}/vllm:latest`);
+          }
+
+          // Export image tags
+          core.exportVariable('IMAGE_TAGS', tags.join(' '));
 
     - name: Build
       uses: docker/build-push-action@v6
@@ -53,8 +77,9 @@ runs:
         cache-to: type=gha,mode=max
         context: ${{ inputs.repository }}/${{ inputs.ref }}
         network: host
+        outputs: type=tar,dest=build.tar
         push: false
-        tags: ghcr.io/${{ github.repository_owner }}/vllm:${{ inputs.ref }}
+        tags: ${{ env.IMAGE_TAGS }}
         target: build
 
         build-args: |
@@ -65,9 +90,6 @@ runs:
           torch_cuda_arch_list=6.0 6.1 7.0 7.5 8.0 8.6 8.9 9.0+PTX
           max_jobs=2
           nvcc_threads=2
-
-        outputs: |
-          type=tar,dest=build.tar
 
     - name: Copy wheel files
       shell: bash
@@ -86,7 +108,8 @@ runs:
         name: vllm_pascal
         path: dist/*.whl
 
-    - name: Build and push
+    - if: inputs.docker_token != ''
+      name: Build and push
       uses: docker/build-push-action@v6
       with:
         cache-from: type=gha
@@ -94,7 +117,7 @@ runs:
         context: ${{ inputs.repository }}/${{ inputs.ref }}
         network: host
         push: true
-        tags: ghcr.io/${{ github.repository_owner }}/vllm:${{ inputs.ref }}
+        tags: ${{ env.IMAGE_TAGS }}
         target: vllm-openai
 
         build-args: |
