--- a/.github/actions/common/expose-cache-vars/action.yml
+++ b/.github/actions/common/expose-cache-vars/action.yml
@@ -8,5 +8,5 @@ runs:
       uses: actions/github-script@v7
       with:
         script: |
-          core.exportVariable("ACTIONS_CACHE_URL", process.env["ACTIONS_CACHE_URL"])
-          core.exportVariable("ACTIONS_RUNTIME_TOKEN", process.env["ACTIONS_RUNTIME_TOKEN"])
+          core.exportVariable('ACTIONS_CACHE_URL', process.env['ACTIONS_CACHE_URL'])
+          core.exportVariable('ACTIONS_RUNTIME_TOKEN', process.env['ACTIONS_RUNTIME_TOKEN'])
