--- a/.github/workflows/vllm-pascal-0.6.2.yml
+++ b/.github/workflows/vllm-pascal-0.6.2.yml
@@ -11,8 +11,9 @@ jobs:
       - name: Build vLLM wheels
         uses: ./.github/actions/build-vllm
         with:
+          docker_latest: true
+          docker_token: ${{ secrets.GHCR_TOKEN }}
           ref: v0.6.2
-          ghcr_token: ${{ secrets.GHCR_TOKEN }}
 
   publish:
     needs: build
