--- a/.github/workflows/triton-pascal-3.0.0.yml
+++ b/.github/workflows/triton-pascal-3.0.0.yml
@@ -39,5 +39,10 @@ jobs:
         with:
           prefix: triton_pascal-3.0.0-
 
+  update-index:
+    needs: publish
+    runs-on: ubuntu-latest
+    uses: ${{ github.repository }}/.github/workflows/zz-update-index.yml@${{ github.ref }}
+
 on:
   workflow_dispatch:
