--- a/.github/workflows/vllm-pascal-0.6.2.yml
+++ b/.github/workflows/vllm-pascal-0.6.2.yml
@@ -31,5 +31,10 @@ jobs:
         with:
           prefix: vllm_pascal-0.6.2-
 
+  update-index:
+    needs: publish
+    runs-on: ubuntu-latest
+    uses: ${{ github.repository }}/.github/workflows/zz-update-index.yml@${{ github.ref }}
+
 on:
   workflow_dispatch:
