--- a/.github/workflows/zz-update-index.yml
+++ b/.github/workflows/zz-update-index.yml
@@ -104,7 +104,5 @@ jobs:
         uses: actions/deploy-pages@v4
 
 on:
-  schedule:
-    - cron: "30 7 * * *"
-
+  workflow_call:
   workflow_dispatch:
