--- a/.github/workflows/triton-pascal-2.3.1.yml
+++ b/.github/workflows/triton-pascal-2.3.1.yml
@@ -43,7 +43,7 @@ jobs:
   update-index:
     needs: publish
     runs-on: ubuntu-latest
-    uses: ${{ github.repository }}/.github/workflows/zz-update-index.yml@main
+    uses: ./.github/workflows/zz-update-index.yml@main
 
 on:
   workflow_dispatch:
