--- a/.github/workflows/triton-pascal-2.3.0.yml
+++ b/.github/workflows/triton-pascal-2.3.0.yml
@@ -43,7 +43,7 @@ jobs:
   update-index:
     needs: publish
     runs-on: ubuntu-latest
-    uses: ./.github/workflows/zz-update-index.yml@main
+    uses: ./.github/workflows/zz-update-index.yml
 
 on:
   workflow_dispatch:
