--- a/.github/workflows/vllm-pascal-0.6.0.yml
+++ b/.github/workflows/vllm-pascal-0.6.0.yml
@@ -33,7 +33,7 @@ jobs:
   update-index:
     needs: publish
     runs-on: ubuntu-latest
-    uses: ./.github/workflows/zz-update-index.yml@main
+    uses: ./.github/workflows/zz-update-index.yml
 
 on:
   workflow_dispatch:
