--- a/.github/workflows/triton-pascal-2.2.0.yml
+++ b/.github/workflows/triton-pascal-2.2.0.yml
@@ -43,7 +43,7 @@ jobs:
   update-index:
     needs: publish
     runs-on: ubuntu-latest
-    uses: ./.github/workflows/zz-update-index.yml
+    uses: sasha0552/pascal-pkgs-ci/.github/workflows/zz-update-index.yml@main
 
 on:
   workflow_dispatch:
