--- a/.github/workflows/triton-pascal-3.0.0.yml
+++ b/.github/workflows/triton-pascal-3.0.0.yml
@@ -41,7 +41,7 @@ jobs:
 
   update-index:
     needs: publish
-    uses: .github/workflows/zz-update-index.yml
+    uses: ./.github/workflows/zz-update-index.yml
 
 on:
   workflow_dispatch:
