--- a/.github/workflows/vllm-pascal-0.6.0.yml
+++ b/.github/workflows/vllm-pascal-0.6.0.yml
@@ -32,7 +32,7 @@ jobs:
 
   update-index:
     needs: publish
-    uses: .github/workflows/zz-update-index.yml
+    uses: ./.github/workflows/zz-update-index.yml
 
 on:
   workflow_dispatch:
