--- a/.github/workflows/vllm-pascal-0.6.2.yml
+++ b/.github/workflows/vllm-pascal-0.6.2.yml
@@ -33,7 +33,7 @@ jobs:
 
   update-index:
     needs: publish
-    uses: .github/workflows/zz-update-index.yml
+    uses: ./.github/workflows/zz-update-index.yml
 
 on:
   workflow_dispatch:
