--- a/.github/workflows/triton-pascal-3.0.0.yml
+++ b/.github/workflows/triton-pascal-3.0.0.yml
@@ -43,5 +43,9 @@ jobs:
     needs: publish
     uses: ./.github/workflows/zz-update-index.yml
 
+    permissions:
+      id-token: write
+      pages: write
+
 on:
   workflow_dispatch:
