--- a/.github/workflows/triton-pascal-2.2.0.yml
+++ b/.github/workflows/triton-pascal-2.2.0.yml
@@ -44,5 +44,9 @@ jobs:
     needs: publish
     uses: ./.github/workflows/zz-update-index.yml
 
+    permissions:
+      id-token: write
+      pages: write
+
 on:
   workflow_dispatch:
