--- a/.github/workflows/vllm-pascal-0.6.1.post1.yml
+++ b/.github/workflows/vllm-pascal-0.6.1.post1.yml
@@ -34,5 +34,9 @@ jobs:
     needs: publish
     uses: ./.github/workflows/zz-update-index.yml
 
+    permissions:
+      id-token: write
+      pages: write
+
 on:
   workflow_dispatch:
