--- a/.github/workflows/vllm-pascal-0.6.2.yml
+++ b/.github/workflows/vllm-pascal-0.6.2.yml
@@ -11,8 +11,7 @@ jobs:
       - name: Build vLLM wheels
         uses: ./.github/actions/build-vllm
         with:
-          docker_latest: 1
-          docker_token: ${{ secrets.GHCR_TOKEN }}
+          ghcr_token: ${{ secrets.GHCR_TOKEN }}
           ref: v0.6.2
 
   publish:
