--- a/.github/workflows/vllm-pascal-main.yml
+++ b/.github/workflows/vllm-pascal-main.yml
@@ -11,7 +11,32 @@ jobs:
       - name: Build vLLM wheels
         uses: ./.github/actions/build-vllm
         with:
+          ghcr_token: ${{ secrets.GHCR_TOKEN }}
           ref: main
+
+  publish:
+    needs: build
+    runs-on: ubuntu-latest
+
+    permissions:
+      contents: write
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Publish wheels
+        uses: ./.github/actions/common/publish-wheels
+        with:
+          prefix: vllm_pascal-0.1.dev
+
+  update-index:
+    needs: publish
+    uses: ./.github/workflows/zz-update-index.yml
+
+    permissions:
+      id-token: write
+      pages: write
 
 on:
   schedule:
