Prune untagged container images

--- a/.github/workflows/triton-pascal-3.0.0.yml
+++ b/.github/workflows/triton-pascal-3.0.0.yml
@@ -41,6 +41,7 @@ jobs:
 
   update-index:
     needs: publish
+    secrets: inherit
     uses: ./.github/workflows/zz-update-index.yml
 
     permissions:
