--- a/.github/workflows/triton-pascal-2.3.1.yml
+++ b/.github/workflows/triton-pascal-2.3.1.yml
@@ -42,6 +42,7 @@ jobs:
 
   update-index:
     needs: publish
+    secrets: inherit
     uses: ./.github/workflows/zz-update-index.yml
 
     permissions:
