--- a/.github/workflows/vllm-pascal-0.6.1.yml
+++ b/.github/workflows/vllm-pascal-0.6.1.yml
@@ -32,6 +32,7 @@ jobs:
 
   update-index:
     needs: publish
+    secrets: inherit
     uses: ./.github/workflows/zz-update-index.yml
 
     permissions:
