--- a/.github/workflows/zz-update-index.yml
+++ b/.github/workflows/zz-update-index.yml
@@ -1,13 +1,52 @@
 name: "[X] Update package index"
 
 jobs:
+  cleanup:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Remove untagged images
+        uses: actions/github-script@v7
+        env:
+          package_name: ${{ matrix.package_name }}
+        with:
+          github-token: ${{ secrets.GHCR_TOKEN }}
+
+          script: |
+            // Retrieve container images
+            const versions = await github.paginate(github.rest.packages.getAllPackageVersionsForPackageOwnedByUser, {
+              package_name: process.env['package_name'],
+              package_type: 'container',
+              per_page: 100,
+              username: context.repo.owner,
+            });
+
+            // Iterate over received images
+            for (const version of versions) {
+              // If there is no tags assigned for the image
+              if (version.metadata.container.tags.length === 0) {
+                // Delete that image
+                await github.rest.packages.deletePackageVersionForUser({
+                  package_name: process.env['package_name'],
+                  package_type: 'container',
+                  package_version_id: version.id,
+                  username: context.repo.owner,
+                });
+
+                // Print notice
+                core.notice(`Untagged image removed: ${version.name}`);
+              }
+            }
+
+    strategy:
+      matrix:
+        package_name:
+          - "vllm"
+
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
       - name: Generate package index
         shell: python
         run: |
@@ -105,4 +144,8 @@ jobs:
 
 on:
   workflow_call:
+    secrets:
+      GHCR_TOKEN:
+        required: true
+
   workflow_dispatch:
