(misc) Do not remove untagged images

--- a/.github/workflows/zz-update-index.yml
+++ b/.github/workflows/zz-update-index.yml
@@ -5,7 +5,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Remove untagged images
+      - if: false
+        name: Remove untagged images
         uses: actions/github-script@v7
         env:
           package_name: ${{ matrix.package_name }}
