(vllm) Disable provenance
Proveance generates `unknown/unknown` architecture that conflict with image prunning (since the multiarch tag is just a pointers to real images).

--- a/.github/actions/build-vllm/action.yml
+++ b/.github/actions/build-vllm/action.yml
@@ -78,6 +78,7 @@ runs:
         cache-to: type=local,dest=/var/tmp/buildx-cache,mode=max
         context: ${{ inputs.repository }}/${{ inputs.ref }}
         outputs: type=tar,dest=build.tar
+        provenance: false
         push: false
         tags: ${{ env.DOCKER_TAGS }}
         target: build
@@ -117,6 +118,7 @@ runs:
       with:
         cache-from: type=local,src=/var/tmp/buildx-cache
         context: ${{ inputs.repository }}/${{ inputs.ref }}
+        provenance: false
         push: true
         tags: ${{ env.DOCKER_TAGS }}
         target: vllm-openai
