--- a/.github/workflows/vllm-pascal-0.5.5.yml
+++ b/.github/workflows/vllm-pascal-0.5.5.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Publish wheels
         uses: ./.github/actions/common/publish-wheels
         with:
-          prefix: vllm_pascal-0.5.5+
+          prefix: vllm_pascal-0.5.5
 
   update-index:
     needs: publish
