--- a/.github/actions/build-vllm/action.yml
+++ b/.github/actions/build-vllm/action.yml
@@ -86,7 +86,7 @@ runs:
         build-args: |
           CUDA_VERSION=12.1.0
           USE_SCCACHE=1
-          torch_cuda_arch_list=6.0 6.1 7.0 7.5 8.0 8.6 8.9 9.0+PTX
+          torch_cuda_arch_list=6.0 6.1
           max_jobs=2
           nvcc_threads=2
 
@@ -127,7 +127,7 @@ runs:
         build-args: |
           CUDA_VERSION=12.1.0
           USE_SCCACHE=1
-          torch_cuda_arch_list=6.0 6.1 7.0 7.5 8.0 8.6 8.9 9.0+PTX
+          torch_cuda_arch_list=6.0 6.1
           max_jobs=2
           nvcc_threads=2
 
