--- a/.github/workflows/triton-pascal-3.0.0.yml
+++ b/.github/workflows/triton-pascal-3.0.0.yml
@@ -12,7 +12,7 @@ jobs:
         uses: ./.github/actions/build-triton
         with:
           python_version: ${{ matrix.python_version }}
-          ref: 55a4ab051c88ba2baa031e520a339d3fded6468f
+          ref: release/3.0.x
 
     strategy:
       matrix:
