--- a/.github/workflows/triton-pascal-3.1.0.yml
+++ b/.github/workflows/triton-pascal-3.1.0.yml
@@ -12,7 +12,7 @@ jobs:
         uses: ./.github/actions/build-triton
         with:
           python_version: ${{ matrix.python_version }}
-          ref: cf34004b8a67d290a962da166f5aa2fc66751326
+          ref: release/3.1.x
 
     strategy:
       matrix:
