(triton) Repackage 3.3.1 as 3.3.0

--- a/.github/actions/build-triton/action.yml
+++ b/.github/actions/build-triton/action.yml
@@ -21,6 +21,12 @@ runs:
       shell: bash
       run: .ci/build-triton.sh "$PWD" "${{ inputs.repository }}" "${{ inputs.ref }}" "${{ inputs.python_version }}"
 
+    - name: Repackage wheels
+      shell: bash
+      run: .ci/common/repackage-wheels.sh "$PWD"
+      env:
+        WHEEL_HOUSE: "dist/*.whl"
+
     - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
